--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a target="_blank" href="/">Download CV</a></li>
+            <li><a href="/">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -49,7 +49,7 @@
     <section id="hero">
         <p>Hello, I am</p>
         <h1>Steve</h1>
-        <h2>A professional</h2> 
+        <h2>I have a profession</h2> 
     </section>
 
       <!-- About section & Donwload CV-->
@@ -67,12 +67,13 @@
                     Whether it's cutting live promos, performing in front of thousands of fans, or 
                     beating people up (especially my boss, lol), I can achieve anything I set my sights on. <br>
                     I also do commercials and I have been in a few movies. They're not very good though :( <br><br>
-                    Outside of work I like to drink beer, talk about cars, and play video games. <br><br>
+                    Outside of work I like to drink beer, beat people up, talk about cars, and play video games. <br><br>
                     <span>My Moves:</span> The Stone Cold Stunner, German Suplex, DDT, Elbow Drop, Enzuigiri (sometimes) <br>
                     <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise <br> <br>
-                    Feel free to download my resume!
+                    And that's the bottom line. Feel free to download my resume!
                 </p>
-                <a aria-label="Download Resume" target="_blank" href="/"><button class="button1">DOWNLOAD CV</button></a> 
+                <a aria-label="Download Resume" href="/"><button class="button1">DOWNLOAD CV</button></a> 
+                <a aria-label="Download Resume" href="/"><button class="button2">WHAT???</button></a> 
             </div>
         </div>
     </section>
@@ -82,7 +83,7 @@
     <section id="projects">
         <div class="section-header">
             <h2>Projects</h2>
-            <p>Here is some extra text if you need it</p>
+            <p>Does anybody have a cold beer for Steve Austin?</p>
         </div>
         <ul>
             
@@ -94,7 +95,7 @@
                         </h3>
                         <p class="project-description">
                         Successfully migrated the World Title at Wrestlemania 17 in close collaboration with 
-                        my Project Manager by using HEEL principles. 
+                        my Project Manager by using HEEL principles. I beat up The Rock pretty bad that day, lol.
                         </p>
                         <div class="project-links">
                         <a href="/"><button class="button1">LINK</button></a>
@@ -114,7 +115,7 @@
                        Project 2
                        </h3>
                        <p class="project-description">
-                       Made some commercials with Ice T.
+                       Made some commercials with Ice T. Never got to beat him up :(
                        </p>
                        <div class="project-links">
                             <a href="/"><button class="button1">LINK</button></a>
@@ -134,7 +135,7 @@
                      Project 3
                  </h3>
                  <p class="project-description">
-                    I was in a movie with Vinnie Jones.
+                    I was in a movie where I beat up Vinnie Jones.
                  </p>
                  <div class="project-links">
                     <a href="/"><button class="button1">LINK</button></a>
@@ -155,12 +156,12 @@
     <footer>
         <section id="contact">
             <div class="contact-details">
-                <h3 class="contact-heading">I can't wait to hear from you!</h3>
+                <h3 class="contact-heading"> Let's <span>fight</span> connect!</h3>
                 <div class="contact-icons">
-                    <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com//"><i class="fab fa-linkedin linkedin"></i></a>
-                    <a aria-label="GitHub" target="_blank" href="https://github.com/"><i class="fab fa-github github"></i></a>
-                    <a aria-label="Email" target="_blank" href="mailto: 123@abc.com"><i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download Resume" target="_blank" href="/"><i class="fa-solid fa-file"></i></a>
+                    <a aria-label="LinkedIn" href="https://www.linkedin.com//"><i class="fab fa-linkedin linkedin"></i></a>
+                    <a aria-label="GitHub" href="https://github.com/"><i class="fab fa-github github"></i></a>
+                    <a aria-label="Email" href="mailto: 123@abc.com"><i class="fas fa-envelope mail"></i></a>
+                    <a aria-label="Download Resume" href="/"><i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
         </section>
