--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         menu.classList.toggle("open");
         }
     </script>
-    <title>My Portfolio</title>
+    <title>Steve</title>
 </head>
 <body>
 
@@ -49,7 +49,7 @@
     <section id="hero">
         <p>Hello, I am</p>
         <h1>Steve</h1>
-        <h2>I have a profession</h2> 
+        <h2>Stone Cold professional</h2> 
     </section>
 
       <!-- About section & Donwload CV-->
@@ -68,8 +68,8 @@
                     beating people up (especially my boss, lol), I can achieve anything I set my sights on. <br>
                     I also do commercials and I have been in a few movies. They're not very good though :( <br><br>
                     Outside of work I like to drink beer, beat people up, talk about cars, and play video games. <br><br>
-                    <span>My Moves:</span> The Stone Cold Stunner, German Suplex, DDT, Elbow Drop, Enzuigiri (sometimes) <br>
-                    <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise <br> <br>
+                    <span>My Moves:</span> The Stone Cold Stunner, German Suplex, DDT, Elbow Drop, Chairshots to the head, Enzuigiri (sometimes) <br>
+                    <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise, HTML <br> <br>
                     And that's the bottom line. Feel free to download my resume!
                 </p>
                 <a aria-label="Download Resume" href="/"><button class="button1">DOWNLOAD CV</button></a> 
@@ -94,8 +94,8 @@
                         Project 1
                         </h3>
                         <p class="project-description">
-                        Successfully migrated the World Title at Wrestlemania 17 in close collaboration with 
-                        my Project Manager by using HEEL principles. I beat up The Rock pretty bad that day, lol.
+                        Successfully migrated the World Title at Wrestlemania 17 from the Rock to myself
+                        in close collaboration with my Project Manager, using the HEEL methodology. 
                         </p>
                         <div class="project-links">
                         <a href="/"><button class="button1">LINK</button></a>
@@ -115,7 +115,29 @@
                        Project 2
                        </h3>
                        <p class="project-description">
-                       Made some commercials with Ice T. Never got to beat him up :(
+                       I helped launch The Rock's Hollywood career the week after by beating him up so bad, 
+                       he had to take time off the ring and make movies instead. Helping others is my passion.
+                       </p>
+                       <div class="project-links">
+                       <a href="/"><button class="button1">LINK</button></a>
+                       <a href="/"><button class="button2">LINK</button></a>
+                       </div>
+                   </div>
+                   <div class="column2">
+                   <img alt="Project 2" src="./images/project2.jpg" />
+                   </div>
+               </div>
+           </li>
+
+            <li>
+                <div class="row">
+                   <div class="column1">
+                       <h3 class="project-title">
+                       Project 3
+                       </h3>
+                       <p class="project-description">
+                       Made some commercials with Ice T. It was pretty cool, but I wasn't 
+                       allowed to beat him up.
                        </p>
                        <div class="project-links">
                             <a href="/"><button class="button1">LINK</button></a>
@@ -123,7 +145,7 @@
                        </div>
                    </div>
                    <div class="column2">
-                   <img alt="Project 2" src="./images/project2.jpeg" />
+                   <img alt="Project 3" src="./images/project3.jpeg" />
                    </div>
                </div>
            </li>
@@ -132,10 +154,10 @@
             <div class="row">
              <div class="column1">
                  <h3 class="project-title">
-                     Project 3
+                     Project 4
                  </h3>
                  <p class="project-description">
-                    I was in a movie where I beat up Vinnie Jones.
+                    I was in a movie where I beat up Vinnie Jones + others.
                  </p>
                  <div class="project-links">
                     <a href="/"><button class="button1">LINK</button></a>
@@ -143,7 +165,7 @@
                  </div>
              </div>
              <div class="column2">
-                 <img alt="Project 3" src="./images/project3.jpeg" />
+                 <img alt="Project 4" src="./images/project4.jpeg" />
              </div>
          </div>
         </li>
@@ -160,7 +182,7 @@
                 <div class="contact-icons">
                     <a aria-label="LinkedIn" href="https://www.linkedin.com//"><i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="GitHub" href="https://github.com/"><i class="fab fa-github github"></i></a>
-                    <a aria-label="Email" href="mailto: 123@abc.com"><i class="fas fa-envelope mail"></i></a>
+                    <a aria-label="Email" href="mailto: the_stevewiser@what.com"><i class="fas fa-envelope mail"></i></a>
                     <a aria-label="Download Resume" href="/"><i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
