--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <script>
         // JavaScript snippet for the navigation bar
-        function toggleMobileMenu(menu) {
-        menu.classList.toggle("open");
-        }
+        const toggleMobileMenu = (menu) => menu.classList.toggle("open");
     </script>
     <title>Steve</title>
 </head>
@@ -52,7 +50,7 @@
         <h2>Stone Cold professional</h2> 
     </section>
 
-      <!-- About section & Donwload CV-->
+      <!-- About section -->
 
       <section id="about" class="about">
         <div class="section-header">
@@ -63,13 +61,13 @@
             <div class="about-bio">
                 <p>
                     Hello and thank you so much for visiting my page! My name is Steve Austin and I am 
-                    an experienced professional with over 30 years in the business. <br><br>
+                    an experienced professional with over 30 years in the wrestling business. <br><br>
                     Whether it's cutting live promos, performing in front of thousands of fans, or 
                     beating people up (especially my boss, lol), I can achieve anything I set my sights on. <br>
                     I also do commercials and I have been in a few movies. They're not very good though :( <br><br>
                     Outside of work I like to drink beer, beat people up, talk about cars, and play video games. <br><br>
-                    <span>My Moves:</span> The Stone Cold Stunner, German Suplex, DDT, Elbow Drop, Chairshots to the head, Enzuigiri (sometimes) <br>
-                    <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise, HTML <br> <br>
+                    <span>My Moves:</span> The Stone Cold Stunner, German Suplex, DDT, Elbow Drop, Chairshots to the head, Enzuigiri (sometimes) <br><br>
+                    <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise, HTML <br><br>
                     And that's the bottom line. Feel free to download my resume!
                 </p>
                 <a aria-label="Download Resume" href="/"><button class="button1">DOWNLOAD CV</button></a> 
