broken link fix

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!-- Header & Navigation bar -->
 
     <header>
-        <div id="brand"><a href="/">Steve</a></div>
+        <div id="brand"><a href="">Steve</a></div>
         <nav>
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="/">Download CV</a></li>
+            <li><a href="">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -35,7 +35,7 @@
           <ul class="mobile-menu">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="/">Download CV</a></li>
+            <li><a href="">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -70,8 +70,8 @@
                     <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise, HTML <br><br>
                     And that's the bottom line. Feel free to download my resume!
                 </p>
-                <a aria-label="Download Resume" href="/"><button class="button1">DOWNLOAD CV</button></a> 
-                <a aria-label="Download Resume" href="/"><button class="button2">WHAT???</button></a> 
+                <a aria-label="Download Resume" href=""><button class="button1">DOWNLOAD CV</button></a> 
+                <a aria-label="Download Resume" href=""><button class="button2">WHAT???</button></a> 
             </div>
         </div>
     </section>
@@ -96,8 +96,8 @@
                         in close collaboration with my Project Manager, using the HEEL methodology. 
                         </p>
                         <div class="project-links">
-                        <a href="/"><button class="button1">LINK</button></a>
-                        <a href="/"><button class="button2">LINK</button></a>
+                        <a href=""><button class="button1">LINK</button></a>
+                        <a href=""><button class="button2">LINK</button></a>
                         </div>
                     </div>
                     <div class="column2">
@@ -117,8 +117,8 @@
                        he had to take time off the ring and make movies instead. Helping others is my passion.
                        </p>
                        <div class="project-links">
-                       <a href="/"><button class="button1">LINK</button></a>
-                       <a href="/"><button class="button2">LINK</button></a>
+                       <a href=""><button class="button1">LINK</button></a>
+                       <a href=""><button class="button2">LINK</button></a>
                        </div>
                    </div>
                    <div class="column2">
@@ -138,8 +138,8 @@
                        allowed to beat him up.
                        </p>
                        <div class="project-links">
-                            <a href="/"><button class="button1">LINK</button></a>
-                            <a href="/"><button class="button2">LINK</button></a>
+                            <a href=""><button class="button1">LINK</button></a>
+                            <a href=""><button class="button2">LINK</button></a>
                        </div>
                    </div>
                    <div class="column2">
@@ -158,8 +158,8 @@
                     I was in a movie where I beat up Vinnie Jones + others.
                  </p>
                  <div class="project-links">
-                    <a href="/"><button class="button1">LINK</button></a>
-                    <a href="/"><button class="button2">LINK</button></a>
+                    <a href=""><button class="button1">LINK</button></a>
+                    <a href=""><button class="button2">LINK</button></a>
                  </div>
              </div>
              <div class="column2">
@@ -181,7 +181,7 @@
                     <a aria-label="LinkedIn" href="https://www.linkedin.com//"><i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="GitHub" href="https://github.com/"><i class="fab fa-github github"></i></a>
                     <a aria-label="Email" href="mailto: the_stevewiser@what.com"><i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download Resume" href="/"><i class="fa-solid fa-file"></i></a>
+                    <a aria-label="Download Resume" href=""><i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
         </section>
