--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <span>My Skills:</span> Beat people up, drink beer, promote my matches, sell merchandise, HTML <br><br>
                     And that's the bottom line. Feel free to download my resume!
                 </p>
-                <a aria-label="Download Resume" href=""><button class="button1">DOWNLOAD CV</button></a> 
-                <a aria-label="Download Resume" href=""><button class="button2">WHAT???</button></a> 
+                <a aria-label="Link button variant 1" href=""><button class="button1">DOWNLOAD CV</button></a> 
+                <a aria-label="Link button variant 2" href=""><button class="button2">WHAT???</button></a> 
             </div>
         </div>
     </section>
